--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 # DataSource Configuration
-spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway
+spring.datasource.url=jdbc:postgresql://localhost:5432/marche
 spring.datasource.username=postgres
-spring.datasource.password=tBgApmIoHuKXyLISaGhICJmqEgNmGZiz
+spring.datasource.password=kaloina1501
 
 # Hibernate Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
