--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # DataSource Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/marche
 spring.datasource.username=postgres
-spring.datasource.password=kaloina1501
+spring.datasource.password=mdp
 
 # Hibernate Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
